Initial Portfolio Webside

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>My Portfolio</h1>
 
             <nav>
-                <img src="Newportfoilo/name.png.png" class="logo1">
+                <img src="" class="logo1">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About me</a></li>
@@ -27,7 +27,7 @@
             </nav>
 
             <div class="header-text">
-                <p>CLOUD COMPUTING</p>
+                <h3>CLOUD COMPUTING</h3>
                 <h1>Hii, I'm <span>Surya Teja</span><br>Welcome to My Website</h1>
             </div>
         </div>
@@ -184,7 +184,7 @@
 
   <textarea name="Message" rows="4" placeholder="Your Message" required></textarea>
 
-  <button type="submit">Send</button>
+  <button type="submit">Send Message</button>
 </form>
 
 
